# securefs

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  PROGRESS.md  README.md  config.example  docker-compose.yml
.github/workflows/: ci.yml
blobstore/: Cargo.toml
blobstore/src/: lib.rs
client/: Cargo.toml
client/src/: main.rs
client/src/commands/: admin.rs  fs.rs  mod.rs
crates/atrest/: Cargo.toml
crates/atrest/src/: keyprovider.rs  lib.rs
crates/blobstore/: Cargo.toml
crates/blobstore/src/: lib.rs  s3.rs
crates/channel/: Cargo.toml
crates/channel/src/: handshake.rs  lib.rs  secure_channel.rs
crates/client/: Cargo.toml
crates/client/src/: cli.rs  main.rs  parse.rs  repl.rs  transport.rs
crates/client/src/commands/: admin.rs  fs.rs  transfer.rs
crates/keyprovider/: Cargo.toml
crates/keyprovider/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: cmd.rs  lib.rs  protocol.rs  secure_channel.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs  protocol.rs
crates/records/: Cargo.toml
crates/records/src/: lib.rs
crates/server/: Cargo.toml
crates/server-core/: Cargo.toml
crates/server-core/migrations/: V1__baseline.sql  V4__merkle_root.sql  V5__sessions.sql  V6__audit_chain.sql  V7__audit_checkpoint.sql
crates/server-core/src/: audit_verify.rs  crypto.rs  lib.rs  pool.rs  rotate.rs  session.rs  util.rs
crates/server-core/src/dao/: fnode.rs  groups.rs  mod.rs  rate_limit.rs  records.rs  secret.rs  sessions.rs  users.rs
crates/server-core/src/handlers/: audit.rs  auth.rs  perms.rs  sessions.rs  user.rs
crates/server-core/src/handlers/fs/: mod.rs  nav.rs  read.rs  relocate.rs  transfer.rs  write.rs
crates/server-core/tests/: audit_chain_test.rs  config_test.rs  cp_test.rs  dao_auth.rs  delete_test.rs  find_test.rs  fk_cascade_test.rs  get_children_test.rs  group_membership_test.rs  health_test.rs  logging_test.rs  metrics_test.rs  migrations_test.rs  mv_test.rs  path_digest_test.rs  scaleout_test.rs  scan_test.rs  storage_test.rs  symlink_test.rs  totp_replay_test.rs
crates/server/src/: main.rs  rate_limiter.rs  util.rs
crates/server/src/dao/: fnode.rs  mod.rs  users.rs
crates/server/src/handlers/: audit.rs  auth.rs  mod.rs  perms.rs  sessions.rs  user.rs
crates/server/src/handlers/fs/: mod.rs  nav.rs  read.rs  relocate.rs  transfer.rs  write.rs
crates/server/tests/: audit_chain_test.rs  config_test.rs  cp_test.rs  dao_auth.rs  delete_test.rs  e2e_test.rs  find_test.rs  fk_cascade_test.rs  get_children_test.rs  group_membership_test.rs  health_test.rs  migrations_test.rs  mv_test.rs  scaleout_test.rs  scan_test.rs  symlink_test.rs  tls_test.rs
db/: schema.sql
deploy/docker/: Dockerfile.server
deploy/helm/securefs/: Chart.yaml  values.yaml
deploy/helm/securefs/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  pgbouncer.yaml  secret.yaml  service.yaml
docker/: Dockerfile.server
fuzz/: Cargo.toml
fuzz/fuzz_targets/: at_rest_decrypt.rs  cmd_parse.rs  dek_unwrap.rs  health_parse.rs  secure_channel_open.rs
keyring/: Cargo.toml
keyring/src/: lib.rs
model/: Cargo.toml
model/src/: cmd.rs  lib.rs  protocol.rs  secure_channel.rs
scripts/: backup.sh  restore.sh
server/: Cargo.toml
server/migrations/: V2__wrapped_dek.sql  V3__kek_generation.sql
server/src/: audit_verify.rs  config.rs  crypto.rs  health.rs  lib.rs  logging.rs  main.rs  metrics.rs  rotate.rs  session.rs  session_store.rs  storage.rs  util.rs
server/src/dao/: admin.rs  audit.rs  cryptometa.rs  dao.rs  fnode.rs  mod.rs  perms.rs  secret.rs  users.rs
server/src/handlers/: audit.rs  auth.rs  fs.rs  mod.rs  perms.rs  sessions.rs  user.rs
server/src/handlers/fs/: mod.rs  nav.rs  read.rs  relocate.rs  transfer.rs  write.rs
server/tests/: audit_chain_test.rs  config_test.rs  cp_test.rs  dao_auth.rs  delete_test.rs  e2e_test.rs  find_test.rs  get_children_test.rs  group_membership_test.rs  health_test.rs  logging_test.rs  metrics_test.rs  migrations_test.rs  mv_test.rs  path_digest_test.rs  scan_test.rs  storage_test.rs  tls_test.rs  totp_replay_test.rs
