[package]
name = "securefs-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "SecureFS command-line client for file system operations"
license.workspace = true

[[bin]]
name = "securefs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
tungstenite = "0.20"
futures-util = "0.3"
serde_json = "1.0"
x25519-dalek = { version = "2.0.1", features = ["serde"] }
aes-gcm = "0.10.3"
hkdf = "0.12"
sha2 = "0.10"
hex = "0.4.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rustyline = "14.0"
colored = "2.0"

# Internal dependencies
securefs-model = { path = "../model" }
