[package]
name = "securefs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
securefs-server-core = { path = "../crates/server-core" }
securefs-channel = { path = "../crates/channel" }

[[bin]]
name = "secure_channel_open"
path = "fuzz_targets/secure_channel_open.rs"
test = false
doc = false
bench = false

[[bin]]
name = "health_parse"
path = "fuzz_targets/health_parse.rs"
test = false
doc = false
bench = false
