[package]
name = "securefs-model"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "SecureFS shared data models and types"
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10.3"
hkdf = "0.12"
sha2 = "0.10"
hex = "0.4.3"
thiserror = "2"
zeroize = "1"
