[package]
name = "securefs-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "SecureFS WebSocket server with file system operations"
license.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
futures-util = "0.3"

# Internal dependencies
securefs-model = { path = "../model" }
