[package]
name = "securefs-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "SecureFS WebSocket server with file system operations"
license.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
futures-util = "0.3"
argon2 = "0.5"
aes-gcm = "0.10.3"
blake3 = "1.5.1"
hex = "0.4.3"
rand_core = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Internal dependencies
securefs-model = { path = "../model" }
