[package]
name = "securefs-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "SecureFS WebSocket server with file system operations"
license.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
futures-util = "0.3"
argon2 = "0.5"
aes-gcm = "0.10.3"
blake3 = "1.5.1"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4.3"
rand_core = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.29", features = ["connect", "rustls-tls-native-roots"] }
tokio-rustls = "0.26"
rustls-pki-types = { version = "1", features = ["std"] }
x25519-dalek = { version = "2.0.1", features = ["serde"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
globset = "0.4"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
zstd = "0.13"
thiserror = "2"
zeroize = "1"
async-trait = "0.1"
refinery = { version = "0.8", features = ["tokio-postgres"] }

# Internal dependencies
securefs-model = { path = "../model" }
securefs-blobstore = { path = "../blobstore" }
securefs-keyring = { path = "../keyring" }

[features]
# Object-storage (S3/MinIO) blob backend. Off by default so the standard build
# stays lean and single-provider for rustls; enable for scale-out deployments.
s3 = ["securefs-blobstore/s3"]

[dev-dependencies]
proptest = "1"
rcgen = { version = "0.14", default-features = false, features = ["pem", "aws_lc_rs"] }
securefs-blobstore = { path = "../blobstore" }
