[package]
name = "securefs-channel"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "SecureFS authenticated application-layer secure channel"
license.workspace = true

[dependencies]
securefs-proto = { path = "../proto" }
aes-gcm = "0.10.3"
hkdf = "0.12"
sha2 = "0.10"
hex = "0.4.3"
thiserror = "2"
zeroize = "1"
serde_json = "1.0"
x25519-dalek = "2.0.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
