[package]
name = "securefs-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "SecureFS command-line client for file system operations"
license.workspace = true

[[bin]]
name = "securefs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["connect", "rustls-tls-native-roots"] }
futures-util = "0.3"
serde_json = "1.0"
x25519-dalek = { version = "2.0.1", features = ["serde"] }
hex = "0.4.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
base64 = "0.22"
rustyline = { version = "14.0", features = ["derive"] }
colored = "2.0"
dirs = "5"
rpassword = "7"
blake3 = "1.5"

# Internal dependencies
securefs-proto = { path = "../proto" }
securefs-channel = { path = "../channel" }
