[package]
name = "securefs-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "SecureFS WebSocket server binary: TLS/WS accept loop, pool wiring, and signals"
license.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
futures-util = "0.3"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
tokio-tungstenite = { version = "0.29", features = ["connect", "rustls-tls-native-roots"] }
tokio-rustls = "0.26"
rustls-pki-types = { version = "1", features = ["std"] }

# Internal dependencies
securefs-server-core = { path = "../server-core" }
securefs-channel = { path = "../channel" }
securefs-proto = { path = "../proto" }
securefs-blobstore = { path = "../blobstore" }

[features]
# Object-storage (S3/MinIO) blob backend. Off by default so the standard build
# stays lean and single-provider for rustls; enable for scale-out deployments.
s3 = ["securefs-server-core/s3", "securefs-blobstore/s3"]

[dev-dependencies]
rcgen = { version = "0.14", default-features = false, features = ["pem", "aws_lc_rs"] }
serde_json = "1.0"
